# VicoEdu_Dashboard

Desktop/个人战略制定2026/: Vico_Education_战略仪表盘.html  Vico_Strategic_Dashboard_PRD.md  Vico_财务计算器_开发需求说明.md  package-lock.json
Desktop/个人战略制定2026/vico-dashboard/: package-lock.json  package.json
Desktop/个人战略制定2026/vico-dashboard/prisma/: dev.db  schema.prisma  seed-remote.ts  seed-turso.ts  seed.ts
Desktop/个人战略制定2026/vico-dashboard/scripts/: add-live-classes-table.ts  add-product-tables.ts  add-teachers-table.ts  fix-live-classes-table.ts
Desktop/个人战略制定2026/vico-dashboard/src/: middleware.ts
MIT-AI/MIT-MAS665-GlowGo/: QUICK_START_README.md  README.md  quick_start.sh  stop_services.sh
MIT-AI/MIT-MAS665-GlowGo/glowgo-backend/: .env.example  .gitignore  WORKFLOW_CHANGES.md  add_time_fields_migration.sql  chat_with_crew.py  config.py  main.py  requirements-simple.txt  requirements.txt  run_tests.py  test_api_simulation.py  test_complete_flow.py  test_debug_flow.py  test_elevenlabs.py  test_matching_crew.py  test_preference_crew.py  test_preference_extraction.py  test_response_display.py  test_time_extraction.py  test_time_recognition.py  test_tts_simple.py  test_voice_integration.py  test_yelp_integration.py  verify_setup.py
MIT-AI/MIT-MAS665-GlowGo/glowgo-frontend/: .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
edsale/edsale/: README.md  pyproject.toml  report.md
edsale/edsale/src/edsale/: __init__.py  crew.py  main.py
edsale/edsale/src/edsale/config/: agents.yaml  tasks.yaml
(+132 files in other folders)
